[tool.poetry]
name = "nekro-plugin-memu-memory"
version = "1.0.0"
description = "Nekro Plugin - memU.so 长期记忆能力插件，支持自动/主动回忆、多人设与UI可配置。"
authors = ["johntime <dev@example.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "memu_memory" }]
repository = "https://github.com/KroMiose/nekro-agent"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
nekro-agent = "*"
memu-py = "*"
pydantic = ">=2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.source]]
# name = "aliyun"
# url = "https://mirrors.aliyun.com/pypi/simple/"
# priority = "primary"

 [tool.black]
 line-length = 128

[tool.ruff]
extend-exclude = []
ignore = [
    "E402",
    "E501",
    "E722",
    "B008",
    "B905",
    "F401",
    "TID252",
    "TRY002",
    "TRY003",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF012",
    "RUF100",
    "PGH003",
    "N801",
    "A003",
]
select = [
    "F",
    "E",
    "I",
    "B",
    "A",
    "COM",
    "C4",
    "ISC",
    "PIE",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "PGH",
    "TRY",
    "RUF",
]
